Fix docker and DEB/RPM