@@ -32,6 +32,8 @@ java {
 import org.apache.tools.ant.filters.ReplaceTokens
 import org.gradle.crypto.checksum.Checksum
 
+apply from: '../common/common.gradle'
+
 configurations {
     dbArtifacts
     defaultsGenerator.extendsFrom(dbArtifacts)
@@ -55,24 +57,13 @@ dependencies {
     defaultsGenerator project(path: ':ignite-runner', configuration: 'defaultsGenerator')
 }
 
-def addOpens = '--add-opens java.base/java.lang=ALL-UNNAMED' +
-        ' --add-opens java.base/java.lang.invoke=ALL-UNNAMED' +
-        ' --add-opens java.base/java.lang.reflect=ALL-UNNAMED' +
-        ' --add-opens java.base/java.io=ALL-UNNAMED' +
-        ' --add-opens java.base/java.nio=ALL-UNNAMED' +
-        ' --add-opens java.base/java.math=ALL-UNNAMED' +
-        ' --add-opens java.base/java.util=ALL-UNNAMED' +
-        ' --add-opens java.base/jdk.internal.misc=ALL-UNNAMED' +
-        ' --add-opens java.base/jdk.internal.access=ALL-UNNAMED' +
-        ' --add-opens java.base/sun.nio.ch=ALL-UNNAMED'
-
 def tokens = [
         PRODUCT_NAME        : 'ignite3db',
         PACKAGE_NAME        : 'ignite3-db',
         PRODUCT_DISPLAY_NAME: 'Apache Ignite',
         APP_JAR             : "${project(':ignite-runner').name}-${project(':ignite-runner').version}.jar".toString(),
         MAIN_CLASS          : 'org.apache.ignite.internal.app.IgniteRunner',
-        ADD_OPENS           : addOpens
+        ADD_OPENS           : project.addOpens
 ]
 
 def tokensLin = tokens + [
@@ -282,8 +273,8 @@ ospackage {
 
         into('lib') {
             from configurations.dbArtifacts
-            from "$buildDir/linux/${zipStartScriptTokensCommon.BOOTSTRAP_FILE_NAME}"
-            from "$buildDir/linux/${zipStartScriptTokensCommon.SETUP_JAVA_FILE_NAME}"
+            from "$buildDir/linux/${tokensLin.BOOTSTRAP_FILE_NAME}"
+            from "$buildDir/linux/${tokensLin.SETUP_JAVA_FILE_NAME}"
         }
 
         into('etc') {
